cks/ingress/tls-ingress-frontend.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  namespace: 4labs
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
      - frontend.4labs.example
    secretName: certificado-frontend-tls
  rules:
  - host: frontend.4labs.example
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
